fixed masthead on mobile and added socialicoplus font

--- a/source/styles/_main.scss
+++ b/source/styles/_main.scss
@@ -6,6 +6,7 @@
 @include font-face('FHB Heavy Clean', '32A5F4_2_0.woff');
 @include font-face('FHB Skinny Distressed', '32A5FC_5_0.woff');
 @include font-face('FHB Heavy Distressed', '32A5FC_3_0.woff');
+@include font-face('SocialicoPlus', 'SocialicoPlus.ttf', normal, normal, 'truetype');
 
 html {
 	overflow-y: scroll;
