--- a/source/styles/components/_fhb-brand-hero.scss
+++ b/source/styles/components/_fhb-brand-hero.scss
@@ -5,18 +5,22 @@
 $block: 'fhb-brand-hero';
 
 .#{$block} {
-	background-attachment: fixed;
+	background-attachment: scroll;
 	background-color: $deep-black;
-	background-image: linear-gradient(0deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, .1)), url('/images/cooper_16x9.jpg');
+	background-image: linear-gradient(0deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, .1)), url('../images/cooper_16x9.jpg');
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	margin-left: ($grid-gutter-width / -2);
 	margin-right: ($grid-gutter-width / -2);
-	min-height: 100%;
+	/*min-height: 100%;*/
 	padding: 12em 0 30px;
 	position: relative;
 	text-align: center;
+
+	@include media-breakpoint-up(lg) {
+		background-attachment: fixed;
+	}
 
 	h1 {
 		/* OLD
